fixed lethal tempo not showing correctly

--- a/react-app/src/components/MatchContainer/MatchContainer.css
+++ b/react-app/src/components/MatchContainer/MatchContainer.css
@@ -129,6 +129,7 @@
 .match-kda-champ-portrait {
   border-radius: 50%;
   width: 4rem;
+  height: 4rem;
 }
 
 .match-player-items {
